@@ -392,9 +392,8 @@ class RemoteBzrDir(BzrDir, _RpcHelper):
         return self._real_bzrdir.clone(url, revision_id=revision_id,
             force_new_repo=force_new_repo, preserve_stacking=preserve_stacking)
 
-    def get_config(self):
-        self._ensure_real()
-        return self._real_bzrdir.get_config()
+    def _get_config(self):
+        return RemoteBzrDirConfig(self)
 
 
 class RemoteRepositoryFormat(repository.RepositoryFormat):
@@ -2385,16 +2384,13 @@ class RemoteBranch(branch.Branch, _RpcHelper):
         return self._real_branch.set_push_location(location)
 
 
-class RemoteBranchConfig(object):
-    """A Config that reads from a smart branch and writes via smart methods.
+class RemoteConfig(object):
+    """A Config that reads and writes from smart verbs.
 
     It is a low-level object that considers config data to be name/value pairs
     that may be associated with a section. Assigning meaning to the these
     values is done at higher levels like bzrlib.config.TreeConfig.
     """
-
-    def __init__(self, branch):
-        self._branch = branch
 
     def get_option(self, name, section=None, default=None):
         """Return the value associated with a named option.
@@ -2404,24 +2400,37 @@ class RemoteBranchConfig(object):
         :param default: The value to return if the value is not set
         :return: The value or default value
         """
-        configobj = self._get_configobj()
-        if section is None:
-            section_obj = configobj
-        else:
-            try:
-                section_obj = configobj[section]
-            except KeyError:
-                return default
-        return section_obj.get(name, default)
+        try:
+            configobj = self._get_configobj()
+            if section is None:
+                section_obj = configobj
+            else:
+                try:
+                    section_obj = configobj[section]
+                except KeyError:
+                    return default
+            return section_obj.get(name, default)
+        except errors.UnknownSmartMethod:
+            return self._vfs_get_option(name, section, default)
+
+    def _response_to_configobj(self, response):
+        if response[0][0] != 'ok':
+            raise UnexpectedSmartServerResponse(response)
+        lines = response[1].read_body_bytes().splitlines()
+        return config.ConfigObj(lines, encoding='utf-8')
+
+
+class RemoteBranchConfig(RemoteConfig):
+    """A RemoteConfig for Branches."""
+
+    def __init__(self, branch):
+        self._branch = branch
 
     def _get_configobj(self):
         path = self._branch._remote_path()
         response = self._branch._client.call_expecting_body(
             'Branch.get_config_file', path)
-        if response[0][0] != 'ok':
-            raise UnexpectedSmartServerResponse(response)
-        lines = response[1].read_body_bytes().splitlines()
-        return config.ConfigObj(lines, encoding='utf-8')
+        return self._response_to_configobj(response)
 
     def set_option(self, value, name, section=None):
         """Set the value associated with a named option.
@@ -2444,10 +2453,45 @@ class RemoteBranchConfig(object):
         if response != ():
             raise errors.UnexpectedSmartServerResponse(response)
 
-    def _vfs_set_option(self, value, name, section=None):
+    def _real_object(self):
         self._branch._ensure_real()
-        return self._branch._real_branch._get_config().set_option(
+        return self._branch._real_branch
+
+    def _vfs_set_option(self, value, name, section=None):
+        return self._real_object()._get_config().set_option(
             value, name, section)
+
+
+class RemoteBzrDirConfig(RemoteConfig):
+    """A RemoteConfig for BzrDirs."""
+
+    def __init__(self, bzrdir):
+        self._bzrdir = bzrdir
+
+    def _get_configobj(self):
+        path = self._bzrdir._path_for_remote_call(self._bzrdir._client)
+        response = self._bzrdir._call_expecting_body(
+            'BzrDir.get_config_file', path)
+        return self._response_to_configobj(response)
+
+    def _vfs_get_option(self, name, section, default):
+        return self._real_object()._get_config().get_option(
+            name, section, default)
+
+    def set_option(self, value, name, section=None):
+        """Set the value associated with a named option.
+
+        :param value: The value to set
+        :param name: The name of the value to set
+        :param section: The section the option is in (if any)
+        """
+        return self._real_object()._get_config().set_option(
+            value, name, section)
+
+    def _real_object(self):
+        self._bzrdir._ensure_real()
+        return self._bzrdir._real_bzrdir
+
 
 
 def _extract_tar(tar, to_dir):
